// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component Test with Actions 1`] = `
<div
  className="card"
>
  <div
    className="cardActions"
  >
    <div
      className="cardActionsLeft"
    >
      <button
        onClick={[Function]}
      >
        Action 1
         (
        0
        )
      </button>
      <button
        onClick={[Function]}
      >
        Action 2
         (
        0
        )
      </button>
    </div>
    <div
      className="cardActionsRight"
    />
  </div>
</div>
`;

exports[`Card component Test with Text 1`] = `
<div
  className="card"
>
  <p>
    Lorem ipsum dolor sit amet
  </p>
</div>
`;

exports[`Card component Test with heading 1`] = `
<div
  className="card"
>
  <div
    className="cardHeading"
  >
    <img
      alt=""
      src="https://via.placeholder.com/60x60"
    />
    <h2>
      Card Example
    </h2>
    <h3>
      Demonstration of TDD
    </h3>
  </div>
</div>
`;

exports[`Card component Test with media 1`] = `
<div
  className="card"
>
  <img
    alt=""
    src="https://via.placeholder.com/300x200"
  />
</div>
`;
